# EEG-oddball-task

./: .gitignore  README.md  pyproject.toml
ov_experiment/scenarios/: oddball.xml  ov_to_gdf.xml  recordingViewer.xml
ov_experiment/scenarios/config/: buttons.txt  image_display_config.xml
ov_experiment/scenarios/data/: Participants.txt  record_p-9999_2024.02.29-11.04.58.ov  record_p-999_2025.01.13-12.07.51.ov  record_p-99_2024.01.10-11.00.25.ov
ov_experiment/scenarios/data/P1/: counts.csv
ov_experiment/scenarios/data/P10/: counts.csv
ov_experiment/scenarios/data/P11/: counts.csv
ov_experiment/scenarios/data/P12/: counts.csv
ov_experiment/scenarios/data/P14/: counts.csv
ov_experiment/scenarios/data/P151/: counts.csv
ov_experiment/scenarios/data/P152/: counts.csv
ov_experiment/scenarios/data/P153/: counts.csv
ov_experiment/scenarios/data/P161/: counts.csv
ov_experiment/scenarios/data/P162/: counts.csv
ov_experiment/scenarios/data/P163/: counts.csv
ov_experiment/scenarios/data/P2/: counts.csv
ov_experiment/scenarios/data/P3/: counts.csv
ov_experiment/scenarios/data/P5/: counts.csv
ov_experiment/scenarios/scripts/: main.lua  stimuli.lua
ov_experiment/scenarios/tools/: stimulus_generator.py
src/: behavioural_analysis.py  control_tfr_array.npy  evokeds.pkl  main.ipynb  ml.ipynb  oddball_tfr_array.npy  sandbox.ipynb  tfr_info.json
src/analysis/: processing.py  test.ipynb
src/config/: _config.py  config.yml
src/tools/: helpers.py  modified_waveguard64_duke.elc  oddball_stimulation_groups.yaml
(+3 files in other folders)
